bug 553571 - try to avoid breaking font runs at ZWNJ when using font fallback, because Indic scripts require shaping across the ZWNJ character. r=roc